2012-04-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed into the function
	"visual_map_print_visual_map" the unclose links of percentile bar.
	
	Fixes: #3520640

2012-04-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/functions_fsgraph.php: Added urlencode in units to
	scape weird symbols like %, &, etc.

2012-04-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/fgraph.php: Added check for empty legend in flash 
	charts.

2012-04-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/functions_fsgraph.php: Modified z-index in flash 
	graphs for string datatype.

2012-04-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* index.php: fixed php noticie message about uninicialized var.
	
	* godmode/reporting/visual_console_builder.php: fixed the image url
	in the header.

2012-04-23  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/fgraph.php: Fixed codification issue
	in the flash graphs legends 3520641

2012-04-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* ChangeLog: fixed lost action in the previous lines.

2012-04-23 Miguel de Dios <miguel.dedios@artica.es>
	
	* index.php: fixed notice message php.
	
	* extensions/update_manager/lib/libupdate_manager.php: fixed into
	the function "um_db_load_settings" the cache of DB, and set to
	translate some untranslate text.
	
	* include/config_process.php: added for a long time the setting the
	$develop_bypass as global.
	
	* extensions/update_manager/settings.php, operation/menu.php,
	operation/search_agents.php: cleaned source code style.
	
	* include/functions_config.php: fixed php noticie message of the
	var "$config['update_manager_installed']" in the first execution
	after intallation.

2012-04-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php
	include/ajax/networkmap.ajax.php
	operation/agentes/networkmap.topology.php: Fixed several